--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,48 @@ main {
   font-weight: bolder;
   border: none;
 }
+
+.counter {
+  display: flex;
+  align-items: center;
+
+}
+
+
+
+.count {
+  background-color: white;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  color: rgb(0, 0, 0);
+  border: none;
+  display: flex;         /* activamos flexbox */
+  align-items: center;   /* centra verticalmente */
+  justify-content: center;
+  margin: 0;
+}
+ 
+
+.minus, .plus {
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: gray;
+  color: white;
+}
+
+.minus {
+  margin-left: 0px;
+  position: relative;
+  top: 40px;
+  left:30px;
+}
+
+.plus {
+  margin-right: 0px;
+   position: relative;
+  top: 40px;
+  right:30px;
+}
