--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: rgb(108, 184, 108);
   color: white;
 }
 
@@ -13,13 +13,27 @@ main {
   font-size: 2rem;
 }
 
+button{
+  background: transparent;
+  border: 2px solid white;
+  font: inherit;
+  cursor: pointer;
+
+}
+
 .value {
-  width: 100px;
+  color: rgb(244, 242, 255);
+  width: 250px;
   height: 100px;
-  border-radius: 50%;
+  padding: 1rem 2rem;
+  border-radius: 3rem;
   font-size: 2rem;
-  font-weight: bolder;
-  border: none;
+  font-weight: 500;
+  transition: all ease-in 0.5s;
+}
+.value:hover {
+  background-color: white;
+  color: rgb(0, 0, 0);
 }
 
 .counter {
